--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+  <head>
+    
+  </head>
+  
+  <body>
+    <h1>Hello!</h1>
+  </body>
+  
+  <script>
+    window.navigator.vibrate(200);
+  </script>
+  
+</html>
