--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <script>
     function vibrate() {
-    window.navigatorvibrate([500, 250, 500, 250, 500, 250, 500, 250, 500, 250, 500]);
+    window.navigator.vibrate([500, 250, 500, 250, 500, 250, 500, 250, 500, 250, 500]);
     }
   </script>
   
