--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script>
     function vibrate() {
     window.navigator.vibrate([500, 250, 500, 250, 500, 250, 500, 250, 500, 250, 500]);
+      //wefef
     }
   </script>
   
