--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script>
     function vibrate() {
     window.navigator.vibrate([100, 50, 100]);
-      //wefef
+      //wefefgughv
     }
   </script>
   
