--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <script>
     function vibrate() {
-    window.navigator.vibrate([100, 50, 100]);
+    window.navigator.vibrate([0, 400, 800, 600, 800, 800, 800, 1000]);
       //wefefgughv
     }
   </script>
