--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <script>
     function vibrate() {
-    window.navigator.vibrate([200, 100, 200, 100, 200, 100, 200]);
+    window.navigator.vibrate([200, 100, 200]);
     }
   </script>
   
